feat: new blogpost

--- a/src/components/BlogTeaserCardHiglight.astro
+++ b/src/components/BlogTeaserCardHiglight.astro
@@ -28,5 +28,5 @@ const { title, description, date, slug, readtime } = Astro.props;
     </p>
   </div>
   <p class="mb-2 line-clamp-3 md:mb-4">{description}</p>
-  <Button href={`/blog/${slug}/`} target={true} style="secondary">Weiterlesen</Button>
+  <Button href={`/blog/${slug}/`} style="secondary">Weiterlesen</Button>
 </article>
