--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,4 +1,6 @@
 ---
+import ViewTransitions from 'astro/components/ViewTransitions.astro';
+
 interface Props {
   title: string;
   description?: string;
@@ -27,6 +29,7 @@ const {
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<ViewTransitions />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
