--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -15,7 +15,7 @@ import { Icon } from "astro-icon";
       title="Github"
       href="https://github.com/tufancal"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /></a
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /> Github</a
     >
   </li>
   <li>
@@ -24,7 +24,7 @@ import { Icon } from "astro-icon";
       title="LinkedIn"
       href="https://www.linkedin.com/in/tufan-calisir/"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /></a
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /> LinkedIn</a
     >
   </li>
   <li>
@@ -33,7 +33,7 @@ import { Icon } from "astro-icon";
       title="Twitter"
       href="https://twitter.com/twofun2fun"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /></a
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /> Twitter</a
     >
   </li>
 </ul>
