--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const featuredPost = blogPosts.filter(
       {
         skills?.map((skill) => {
           return (
-            <li class="inline-flex flex-col items-center justify-center gap-1 text-center sm:flex-row sm:justify-start sm:gap-2">
+            <li class="inline-flex flex-col items-center justify-center gap-1 text-center sm:justify-start sm:gap-2">
               <Icon name={`simple-icons:${skill}`} class="w-6" />
               {skill.toUpperCase()}
             </li>
